<resources>
    <string name="app_name">ProjectOne</string>

    <!-- Main -->
    <string name="profile_picture_content_description">Profile Picture</string>

    <string name="full_name_helper_text">Full Name</string>
    <string name="full_name_hint">Your Full Name</string>

    <string name="username_helper_text">Username</string>
    <string name="username_hint">Your Username</string>

    <string name="email_helper_text">Email</string>
    <string name="email_hint">Your Email</string>

    <string name="dob_helper_text">Date of Birth</string>
    <string name="dob_hint">Your Date of Birth</string>

    <string name="registration_date_helper_text">Registration Date</string>
    <string name="registration_date_hint">Your Registration Date</string>

    <!-- Blogs Recycler View -->
    <string name="total_blogs_helper_text">Total Blogs</string>
    <string name="total_blogs_date_hint">0</string>

    <string name="blog_picture_content_description">Blog Picture</string>

    <string name="blog_default_placeholder">---</string>

    <string name="blog_posted_by_text">Posted By:</string>
    <string name="blog_posted_on_text">Posted On:</string>
    <string name="blog_reposts_text">Reposts:</string>
    <string name="blog_likes_text">Likes:</string>

    <!-- Menu -->
    <string name="action_get_user_one">Get User One</string>
    <string name="action_get_user_two">Get User Two</string>
    <string name="action_get_user_three">Get User Three</string>
    <string name="action_get_blogs">Get Blogs</string>
</resources>