<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/blog_image"
            android:contentDescription="@string/blog_picture_content_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/blog_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/container1">

            <TextView
                android:id="@+id/blog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blog_default_placeholder"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/blog_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blog_default_placeholder"
                android:textColor="@color/black_transparent_50"
                android:textSize="14sp"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blog_posted_by_text"
                    android:textColor="@color/black_transparent_50"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/posted_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blog_default_placeholder"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blog_posted_on_text"
                    android:textColor="@color/black_transparent_50"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/posted_on"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blog_default_placeholder"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/reposts_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blog_reposts_text"
                        android:textColor="@color/black_transparent_50"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/reposts_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/blog_default_placeholder"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@+id/reposts_title"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/likes_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blog_likes_text"
                        android:textColor="@color/black_transparent_50"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/likes_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/blog_default_placeholder"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@+id/likes_title"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>